--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="aru_css.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title></title>
     </head>
     <body>
@@ -45,7 +46,24 @@
 
         <!-- FOOTER -->
         <div class="footer">
-            <p style="color:white;">This will always appear at the bottom of the page, but <strong>not fixed</strong></p>
+            <footer class="footer-distributed">
+                <div class="footer-left">
+                    <img src="aarushi_org.jpg" alt="AARUSHI ORG" width="80" height="80">
+                    <h4 style="color: white;">AARUSHI_ORG</h4>
+                    <p class="footer-company-name" style="color: white;">Aarushi_org © 2021.All rights reserved</p>
+                </div>
+                <style>
+                    .vl {
+                      border-left: 1px solid white;
+                      height: 160px;
+                      margin-left: 300px;
+                    }
+                </style><div class="vl">
+                    <a href="https://www.facebook.com/aarushi.org" class="fa fa-facebook"></a><a href="https://www.facebook.com/aarushi.org" style="color: white; text-decoration-line: none;padding-left: 30px;"> Aarushi </a> <br>
+                    <a href="https://instagram.com/aarushi_org?utm_medium=copy_link" class="fa fa-instagram"></a><a href="https://instagram.com/aarushi_org?utm_medium=copy_link" style="color: white; text-decoration-line: none;"> aarushi_org</a><br>
+                    <a class="fa fa-rss"></a><a style="color: white; text-decoration-line: none;">9999999999</a><br>
+                </div>
+            </footer>
         </div>
 
     </body>
