--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
         <!-- navigation bar -->
         <div class="topnav">
-            <a class="active" href="#home"><b>HOME </b></a>
-            <a href="#about"><b> ABOUT US </b></a>
+            <a class="active" href="index.html"><b>HOME </b></a>
+            <a href="aboutus.html"><b> ABOUT US </b></a>
             <a href="#joinus"><b>GET INVOLVED/JOIN US </b></a>
             <a href="#"><b>EVENTS</b></a>
             <a href="#"><b>OUR PROGRAMS</b></a>
@@ -58,13 +58,14 @@
                       height: 160px;
                       margin-left: 300px;
                     }
-                </style><div class="vl">
+                </style>
+                <div class="vl">
                     <a href="https://www.facebook.com/aarushi.org" class="fa fa-facebook"></a><a href="https://www.facebook.com/aarushi.org" style="color: white; text-decoration-line: none;padding-left: 30px;"> Aarushi </a> <br>
                     <a href="https://instagram.com/aarushi_org?utm_medium=copy_link" class="fa fa-instagram"></a><a href="https://instagram.com/aarushi_org?utm_medium=copy_link" style="color: white; text-decoration-line: none;"> aarushi_org</a><br>
                     <a class="fa fa-rss"></a><a style="color: white; text-decoration-line: none;">9999999999</a><br>
                 </div>
             </footer>
         </div>
-
+        
     </body>
 </html>
