--- a/aboutus.html
+++ b/aboutus.html
@@ -10,7 +10,7 @@
         <div class="topnav">
             <a href="index.html"><b>HOME </b></a>
             <a class="active" href="aboutus.html"><b> ABOUT US </b></a>
-            <a href="#joinus"><b>GET INVOLVED/JOIN US </b></a>
+            <a href="joinus.html"><b>GET INVOLVED/JOIN US </b></a>
             <a href="#"><b>EVENTS</b></a>
             <a href="#"><b>OUR PROGRAMS</b></a>
             <img src="aarushi_org.jpg" alt="AARUSHI ORG" width="60" height="48" align="right">
