--- a/joinus.html
+++ b/joinus.html
@@ -11,7 +11,7 @@
             <a href="index.html"><b>HOME </b></a>
             <a href="aboutus.html"><b> ABOUT US </b></a>
             <a class="active" href="joinus.html"><b>GET INVOLVED/JOIN US </b></a>
-            <a href="#"><b>EVENTS</b></a>
+            <a href="event.html"><b>EVENTS</b></a>
             <a href="#"><b>OUR PROGRAMS</b></a>
             <img src="aarushi_org.jpg" alt="AARUSHI ORG" width="60" height="48" align="right">
         </div>
