--- a/event.html
+++ b/event.html
@@ -8,42 +8,16 @@
 
         <!-- navigation bar -->
         <div class="topnav">
-            <a class="active" href="index.html"><b>HOME </b></a>
+            <a href="index.html"><b>HOME </b></a>
             <a href="aboutus.html"><b> ABOUT US </b></a>
             <a href="joinus.html"><b>GET INVOLVED/JOIN US </b></a>
-            <a href="event.html"><b>EVENTS</b></a>
+            <a class="active" href="event.html"><b>EVENTS</b></a>
             <a href="#"><b>OUR PROGRAMS</b></a>
             <img src="aarushi_org.jpg" alt="AARUSHI ORG" width="60" height="48" align="right">
         </div>
 
-        <!-- Image slideshow -->
-        <div id="slider">
-            <figure>
-                  <img src="slide1.PNG">
-                  <img src="slide2.PNG">
-                  <img src="slide_3.PNG.jfif">
-            </figure>
-        </div>
 
-        <!-- PAGE CONTENT -->
-        <div class="image-txt-container">
-            <img src="aru_icon_mir.jpg" style="float: right;" width="250" height="250">
-            <h3>
-              <u>WHO ARE WE : </u>
-            </br>
-            A group of young minds who one fine day came together and started dreaming about touching other people's lives in the most beautiful ways possible  🌟
-            </h3>
-        </div>
-
-        <div class="image-txt-container">
-            <h3>
-                <u>WHAT WE DO : </u>
-              </br>
-              We aim to fullfil small wishes of impoverished children come true. We also want to provide free tuition, food and fun interactive session to socially marginalised children 🌟
-              </h3>
-            <img src="aru_icon.jfif" style="float: left;" width="250" height="250">
-        </div>
-
+        
         <!-- FOOTER -->
         <div class="footer">
             <footer class="footer-distributed">
