--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <a href="aboutus.html"><b> ABOUT US </b></a>
             <a href="joinus.html"><b>GET INVOLVED/JOIN US </b></a>
             <a href="event.html"><b>EVENTS</b></a>
-            <a href="#"><b>OUR PROGRAMS</b></a>
+            <a href="service.html"><b>OUR PROGRAMS</b></a>
             <img src="aarushi_org.jpg" alt="AARUSHI ORG" width="60" height="48" align="right">
         </div>
 
@@ -60,7 +60,7 @@
                     }
                 </style>
                 <div class="vl">
-                    <a href="https://www.facebook.com/aarushi.org" class="fa fa-facebook"></a><a href="https://www.facebook.com/aarushi.org" style="color: white; text-decoration-line: none;padding-left: 30px;"> Aarushi </a> <br>
+                    <a href="https://www.facebook.com/aarushi.org" class="fa fa-facebook"></a><a href="https://www.facebook.com/aarushi.org" style="color: white; text-decoration-line: none;padding-left:0px;"> Aarushi </a> <br>
                     <a href="https://instagram.com/aarushi_org?utm_medium=copy_link" class="fa fa-instagram"></a><a href="https://instagram.com/aarushi_org?utm_medium=copy_link" style="color: white; text-decoration-line: none;"> aarushi_org</a><br>
                     <a class="fa fa-rss"></a><a style="color: white; text-decoration-line: none;">9999999999</a><br>
                 </div>
